--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <div id="weather-container">
       <h2>Fashion Weather</h2>
-      <div id="unit-toggle">
-        <label
-          ><input type="radio" name="units" value="metric" checked />
-          Celsius</label
-        >
-        <label
-          ><input type="radio" name="units" value="imperial" />
-          Fahrenheit</label
-        >
+      <div id="unit-toggle-container">
+        <div id="unit-toggle">
+          <label>
+            <input type="radio" name="units" value="metric" checked /> Celsius
+          </label>
+          <label>
+            <input type="radio" name="units" value="imperial" /> Fahrenheit
+          </label>
+        </div>
       </div>
       <input type="text" id="city" placeholder=" Enter city" />
       <button onclick="getWeather()">Search</button>
