add logo and adjust body height

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
+    <img src="FASHION FORECASTER logo.png" class="logo" />
     <div id="weather-container">
-      <h2>Fashion Weather</h2>
       <div id="unit-toggle-container">
         <div id="unit-toggle">
           <label>
